# bitcoin_final

./: Architecture.md  DESIGN.md  Design.md  README.md  TESTING.md  merkle_prover.py  merkle_verifier.py  pyproject.toml
blockchain/: __init__.py  block.py  chain.py  merkle_prover.py  merkle_verifier.py  pow.py  tx.py  wallet.py
dashboard/: __init__.py  app.py  orchestrator.py
dashboard/static/: index.html
net/: __init__.py  messages.py  peer.py  tracker.py
tests/: integration_demo.py  test_chain.py  test_dashboard.py  test_dashboard_app.py
